exercises/practice/grep/test_output.txt
FAIL exercises/practice/grep/grep.spec.js
  grep exercise
    Test grepping a single file
      ✕ One file, one match, no flags (95 ms)
      ○ skipped One file, one match, print line numbers flag
      ○ skipped One file, one match, case-insensitive flag
      ○ skipped One file, one match, print file names flag
      ○ skipped One file, one match, match entire lines flag
      ○ skipped One file, one match, multiple flags
      ○ skipped One file, several matches, no flags
      ○ skipped One file, several matches, print line numbers flag
      ○ skipped One file, several matches, match entire lines flag
      ○ skipped One file, several matches, case-insensitive flag
      ○ skipped One file, several matches, inverted flag
      ○ skipped One file, no matches, various flags
      ○ skipped One file, one match, file flag takes precedence over line flag
      ○ skipped One file, several matches, inverted and match entire lines flags
    Test grepping multiples files at once
      ✕ Multiple files, one match, print file names flag (60 ms)
      ○ skipped Multiple files, one match, no flags
      ○ skipped Multiple files, several matches, no flags
      ○ skipped Multiple files, several matches, print line numbers flag
      ○ skipped Multiple files, several matches, case-insensitive flag
      ○ skipped Multiple files, several matches, inverted flag
      ○ skipped Multiple files, one match, match entire lines flag
      ○ skipped Multiple files, one match, multiple flags
      ○ skipped Multiple files, no matches, various flags
      ○ skipped Multiple files, several matches, file flag takes precedence over line number flag
      ○ skipped Multiple files, several matches, inverted and match entire lines flags

  ● grep exercise › Test grepping a single file › One file, one match, no flags

    expect(received).resolves.toBe()

    Received promise rejected instead of resolved
    Rejected to value: "/home/jake/Development/mentat/tests/benchmarks/repos/exercism-javascript/exercises/practice/grep/grep.js:97
    const { flags, pattern, files } = parseArguments(ARGS);
            ^·
    SyntaxError: Identifier 'flags' has already been declared

      63 |   describe('Test grepping a single file', () => {
      64 |     it('One file, one match, no flags', () => {
    > 65 |       return expect(
         |              ^
      66 |         spawnGrep({
      67 |           pattern: 'Agamemnon',
      68 |           flags: [],

      at node:internal/main/run_main_module:23:47·
      Node.js v18.15.0"
      at expect (node_modules/expect/build/index.js:113:15)
      at Object.expect (exercises/practice/grep/grep.spec.js:65:14)

  ● grep exercise › Test grepping multiples files at once › Multiple files, one match, print file names flag

    expect(received).resolves.toBe()

    Received promise rejected instead of resolved
    Rejected to value: "/home/jake/Development/mentat/tests/benchmarks/repos/exercism-javascript/exercises/practice/grep/grep.js:97
    const { flags, pattern, files } = parseArguments(ARGS);
            ^·
    SyntaxError: Identifier 'flags' has already been declared

      286 |
      287 |     it('Multiple files, one match, print file names flag', () => {
    > 288 |       return expect(
          |              ^
      289 |         spawnGrep({
      290 |           pattern: 'who',
      291 |           flags: ['-l'],

      at node:internal/main/run_main_module:23:47·
      Node.js v18.15.0"
      at expect (node_modules/expect/build/index.js:113:15)
      at Object.expect (exercises/practice/grep/grep.spec.js:288:14)

Test Suites: 1 failed, 1 total
Tests:       2 failed, 23 skipped, 25 total
Snapshots:   0 total
Time:        0.54 s, estimated 1 s
Ran all test suites matching /exercises\/practice\/grep/i.
